--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,52 +37,69 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
+    <div class="navbar">
 
-    <div class="navbar navbar-fluid-top">
-      <div class="navbar-inner">
-        <div class="container-fluid">
-          <a class="btn btn-navbar" data-target=".nav-collapse" data-toggle="collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="#">GitBoot</a>
-          <div class="container-fluid nav-collapse">
-            <ul class="nav">
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
+              <div class="navbar-inner">
+                <div class="container">
+
+                  <ul class="nav">
+
+                    <li class="active"><a href="#">Home</a></li>
+
+                    <li><a href="#">Projects</a></li>
+
+                    <li><a href="#">Services</a></li>
+
+                    <li><a href="#">Downloads</a></li>
+
+                    <li><a href="#">About</a></li>
+
+                    <li><a href="#">Contact</a></li>
+
+                  </ul>
+
+                </div>
+
+              </div>
+
+            </div>
+
+
+    <div class="container">
+
+      <h1><a href="”#”">Bootstrap Site</a></h1>
+
+      <div class="hero-unit">
+    <h1>Marketing stuff!</h1>
+    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+    <a href="#" class="btn btn-large btn-success">Get Started</a>
     </div>
 
-    <div class="container-fluid">
+    <div class="row">
+    <div class="span3">
+      <p>Dummy Text</p>
+    </div>
+    <div class="span3">
+      <p>Dummy Text</p>
+    </div>
+     <div class="span3">
+      <p>Dummy Text</p>
+    </div>
+     <div class="span3">
+      <p>Dummy Text</p>
+    </div>
+    </div>
 
-      <div class="row-fluid">
-        <div class="span3">
-          <div class="well sidebar-nav">
-            <ul class="nav nav-list">
-              <li class="nav-header">Sidebar</li>
-              <li><%= link_to "Link1", "/path1"  %></li>
-              <li><%= link_to "Link2", "/path2"  %></li>
-              <li><%= link_to "Link3", "/path3"  %></li>
-            </ul>
-          </div><!--/.well -->
-        </div><!--/span-->
-        <div class="span9">
-          <%= bootstrap_flash %>
-          <%= yield %>
-        </div>
-      </div><!--/row-->
+  </div>
+
+    
+
+<hr>
+<div class="footer">
+<p>&copy; 2013</p>
+</div>
 
 
-      <footer>
-        <p>&copy; Company 2013</p>
-      </footer>
-
-    </div> <!-- /container -->
 
   </body>
 </html>
