--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,7 @@
-<h1>Home#index</h1>
-<p>Find me in app/views/home/index.html.erb</p>
+
+<div class="alert">  
+  <a class="close" data-dismiss="alert">×</a>  
+  <strong>Warning!</strong> Best check yo self, you're not looking too good.  
+</div>  
+- See more at: http://www.w3resource.com/twitter-bootstrap/alerts-and-errors-tutorial.php#sthash.HnQqYLN6.dpuf
+<%= render "bones/marketing" %>
