--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,67 +37,11 @@
     <%= javascript_include_tag "application" %>
   </head>
   <body>
-    <div class="navbar">
+<%= render "bones/navbar" %>
 
-              <div class="navbar-inner">
-                <div class="container">
+<%= render "bones/marketing" %>
 
-                  <ul class="nav">
-
-                    <li class="active"><a href="#">Home</a></li>
-
-                    <li><a href="#">Projects</a></li>
-
-                    <li><a href="#">Services</a></li>
-
-                    <li><a href="#">Downloads</a></li>
-
-                    <li><a href="#">About</a></li>
-
-                    <li><a href="#">Contact</a></li>
-
-                  </ul>
-
-                </div>
-
-              </div>
-
-            </div>
-
-
-    <div class="container">
-
-      <h1><a href="”#”">Bootstrap Site</a></h1>
-
-      <div class="hero-unit">
-    <h1>Marketing stuff!</h1>
-    <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-    <a href="#" class="btn btn-large btn-success">Get Started</a>
-    </div>
-
-    <div class="row">
-    <div class="span3">
-      <p>Dummy Text</p>
-    </div>
-    <div class="span3">
-      <p>Dummy Text</p>
-    </div>
-     <div class="span3">
-      <p>Dummy Text</p>
-    </div>
-     <div class="span3">
-      <p>Dummy Text</p>
-    </div>
-    </div>
-
-  </div>
-
-    
-
-<hr>
-<div class="footer">
-<p>&copy; 2013</p>
-</div>
+<%= render "bones/footer" %>
 
 
 
